test/tests/errors/error-record-non-unique-ids4.sm
// true
// false
// false
/**/
/**/

program {
    proc x(x: array of record(x: int, x: int)) {}
}